<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/a1"
            android:text="@string/a1"
            style="@style/TTSButtons"
            ></Button>
        <Button
            android:id="@+id/a2"
            android:text="@string/a2"
            style="@style/TTSButtons"
            ></Button>
        <Button
            android:id="@+id/a3"
            android:text="@string/a3"
            style="@style/TTSButtons"
            ></Button>
        <Button
            android:id="@+id/a4"
            android:text="@string/a4"
            style="@style/TTSButtons"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/b1"
            android:text="@string/b1"
            style="@style/TTSButtons"
            ></Button>
        <Button
            android:id="@+id/b2"
            android:text="@string/b2"
            style="@style/TTSButtons"
            ></Button>
        <Button
            android:id="@+id/b3"
            android:text="@string/b3"
            style="@style/TTSButtons"
            ></Button>

    </LinearLayout>
    <Button
        android:text="@string/exit_button"
        android:layout_gravity="center"
        android:id="@+id/exit_button"
        style="@style/TTSButtons"></Button>

</LinearLayout>